enable_testing()
# TOFEMObjFun
add_executable(TOFEMObjFunTest test_tofemobjfun.cpp)
target_link_libraries(TOFEMObjFunTest PRIVATE Catch2::Catch2WithMain optfun_le ${FEM_LIB} ${TOPOLOGIESCORE_LIB} )
add_test(TOFEMObjFunTest TOFEMObjFunTest)
# copy input files
configure_file(./inputfiles/testtri.msh ${CMAKE_CURRENT_BINARY_DIR}/testtri.msh COPYONLY)
configure_file(./inputfiles/cylinder.txt ${CMAKE_CURRENT_BINARY_DIR}/cylinder.txt COPYONLY)
configure_file(./inputfiles/rectsolid.stl ${CMAKE_CURRENT_BINARY_DIR}/rectsolid.stl COPYONLY)
configure_file(./inputfiles/testheavimesh2d.xml ${CMAKE_CURRENT_BINARY_DIR}/testheavimesh2d.xml COPYONLY)
configure_file(./inputfiles/testheavimesh3d.xml ${CMAKE_CURRENT_BINARY_DIR}/testheavimesh3d.xml COPYONLY)
configure_file(./inputfiles/testmesh2d.xml ${CMAKE_CURRENT_BINARY_DIR}/testmesh2d.xml COPYONLY)
configure_file(./inputfiles/testmesh2dGMSH.xml ${CMAKE_CURRENT_BINARY_DIR}/testmesh2dGMSH.xml COPYONLY)
configure_file(./inputfiles/testmesh3d.xml ${CMAKE_CURRENT_BINARY_DIR}/testmesh3d.xml COPYONLY)
configure_file(./inputfiles/testquad.txt ${CMAKE_CURRENT_BINARY_DIR}/testquad.txt COPYONLY)
configure_file(./inputfiles/tof_exo_2.xml ${CMAKE_CURRENT_BINARY_DIR}/tof_exo_2.xml COPYONLY)
configure_file(./inputfiles/tof_gmsh_2.xml ${CMAKE_CURRENT_BINARY_DIR}/tof_gmsh_2.xml COPYONLY)
configure_file(./inputfiles/tof_exo_heavi2.xml ${CMAKE_CURRENT_BINARY_DIR}/tof_exo_heavi2.xml COPYONLY)
configure_file(./inputfiles/tof_exo_3.xml ${CMAKE_CURRENT_BINARY_DIR}/tof_exo_3.xml COPYONLY)
configure_file(./inputfiles/tof_exo_heavi3.xml ${CMAKE_CURRENT_BINARY_DIR}/tof_exo_heavi3.xml COPYONLY)
